[package]
name = "cargo-vcpkg"
version = "0.1.7"
authors = ["Jim McGrath <jimmc2@gmail.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
repository = "https://github.com/mcgoo/cargo-vcpkg"
readme = "README.md"
documentation = "https://docs.rs/vcpkg"
description = """
A cargo subcommand to build a vcpkg tree from metadata entries in Cargo.toml for
a top level crate and the crates that it depends on.
"""
keywords = ["build-dependencies", "windows", "macos", "linux"]
categories = ["development-tools::cargo-plugins"]

[dev-dependencies]
remove_dir_all = "0.6.0"

[dependencies]
anyhow = "1.0.31"
cargo_metadata = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.53"
structopt = "0.3"
termcolor = "1.1.0"
vcpkg = "0.2.11"
